--- a/style.css
+++ b/style.css
@@ -21,13 +21,15 @@ body {
     padding: 20px;
     font-size: 20px;
     text-decoration:none;
+    text-transform: capitalize;
+    transition:0.4s 
   }
   
   .topmenu:hover {
     color: white;
     font-weight: bolder;
-    text-decoration: underline;
-
+    text-decoration: none;
+    transform: translate(-12px);
   }
   
   .topdiv {
@@ -115,6 +117,8 @@ body {
   }
   
   /* Skills */
+
+
   
   .all_skills {
     display: flex;
@@ -133,11 +137,19 @@ body {
     font-size: 20px;
     box-shadow: 0 3px 10px gray;
   }
+
+  
+  .skill:hover{
+    transform:scale(1.2) translateY(10px);
+    transition: .4s;
+
+  }
   
   .skill img {
     height: 35px;
     align-items: center;
   }
+
   
   .skills h6 {
     align-items: center;
@@ -160,6 +172,7 @@ body {
     align-items: center;
     justify-content: center;
   }
+
   
   /* Projects */
   
@@ -307,7 +320,7 @@ body {
     border: 1px solid #7600bc;
     color: #7600bc;
     display: block;
-    border-radius: 6px;
+    border-radius: 10px;
     text-align: center;
     margin: 50px;
     padding: 10px;
@@ -323,4 +336,85 @@ body {
     border-radius: 6px;
     text-align: center;
     cursor: pointer;
+    transform:scale(1.2) translateY(10px);
+    transition: .4s;
   }
+
+
+  /*contacts*/
+
+  .footer{
+    padding: 10px 0;
+}
+
+.main{
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+
+.col{
+  width: 25%;
+}
+
+.col h4{
+  font-size: 1.2rem;
+  color: #7600bc;
+  margin-bottom: 25px;
+  position: relative;
+  margin: 50px;
+  font-size: 50px;
+}
+
+
+.col ul li:not(last-child){
+  margin-bottom: 15px;
+}
+
+.col ul li a{
+  color: #7600bc;
+  font-size: 1.1rem;
+  display: block;
+  text-transform: capitalize;
+  transition: .4s;
+}
+
+.col ul li a:hover{
+  color: var(--text-color);
+  transform: translate(-12px);
+}
+
+.col .social{
+  width: 220px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 50px;
+  padding: 10px;
+
+}
+
+.col .social a{
+  height: 40px;
+  width: 40px;
+  background:#7600bc;
+  color:white;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size:1.5rem;
+  border-radius: 50%;
+  transition: .4s;
+
+}
+
+.col .social a:hover{
+  transform: scale(1.2);
+  color:var(--bg-color);
+  background: #7600bc;
+}
+
+.social a:link{
+  text-decoration: none;
+}
